--- a/app/translations/cs.json
+++ b/app/translations/cs.json
@@ -24,7 +24,7 @@
         "title": "Zábava",
         "description": [
           "Zatancujte si s populárními hity.",
-          "v pátek až sobotu od 10 večer."
+          "v pátek a sobotu od 10 večer."
         ],
         "buttonText": "Info »",
         "buttonLink": "information",
